--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@
 
     <main class="diagram">
 
-        <div class="diagram__element" style="width: 50px; min-height: 300px";><span>300</span></div>
+        <div class="diagram__element" style="width: 50px; min-height: 225px";><span>225</span></div>
         <div class="diagram__element" style="width: 50px; min-height: 150px";>150</div>
         <div class="diagram__element" style="width: 50px; min-height: 20px";>20</div>
         <div class="diagram__element diagram__element_is-comparing" style="width: 50px; min-height: 200px";>200</div>
         <div class="diagram__element diagram__element_is-comparing" style="width: 50px; min-height: 100px";>100</div>
         <div class="diagram__element" style="width: 50px; min-height: 58px";>58</div>
-        <div class="diagram__element" style="width: 50px; min-height: 225px";>225</div>
+        <div class="diagram__element diagram__element_is-sorted" style="width: 50px; min-height: 300px";>300</div>
 
     </main>
 
