--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
         <div class="diagram__element diagram__element_is-comparing" style="width: 50px; min-height: 200px";>200</div>
         <div class="diagram__element diagram__element_is-comparing" style="width: 50px; min-height: 100px";>100</div>
         <div class="diagram__element" style="width: 50px; min-height: 58px";>58</div>
+        <div class="diagram__element" style="width: 50px; min-height: 120px";>120</div>
+        <div class="diagram__element" style="width: 50px; min-height: 210px";>210</div>
+        <div class="diagram__element diagram__element_is-sorted" style="width: 50px; min-height: 280px";>280</div>
         <div class="diagram__element diagram__element_is-sorted" style="width: 50px; min-height: 300px";>300</div>
 
     </main>
